--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Broadway</title>
   </head>
   <body>
-    <div>
+    <div class="heading">
       <h1>Broadway Design</h1>
-      <p>Home</p>
-      <p>About</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contact</p>
+      <p><a href="" class="menu">Home</a></p>
+      <p><a href="" class="menu">About</a></p>
+      <p><a href="" class="menu">Work</a></p>
+      <p><a href="" class="menu">Team</a></p>
+      <p><a href="" class="menu">Contact</a></p>
     </div>
     <div>
       <h2>Our Process</h2>
