--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>We put everything we have into our work.</p>
     </div>
     <div>
-      <h2>Designed in New York</h2>
+      <h2 class="design">Designed in New York</h2>
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
       <h3>Team</h3>
@@ -36,7 +36,7 @@
       <p>Email: test@example.com</p>
       <p>Twitter: @Test</p>
     </div>
-    <div>
+    <div class="foot">
       <p>© Broadway 2017 Home About Work Team Contact</p>
     </div>
   </body>
