--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <div class="heading">
       <h1>Broadway Design</h1>
-      <p><a href="" class="menu">Home</a></p>
-      <p><a href="" class="menu">About</a></p>
-      <p><a href="" class="menu">Work</a></p>
-      <p><a href="" class="menu">Team</a></p>
-      <p><a href="" class="menu">Contact</a></p>
+      <p><a href="#" class="menu">Home</a></p>
+      <p><a href="#" class="menu">About</a></p>
+      <p><a href="#" class="menu">Work</a></p>
+      <p><a href="#" class="menu">Team</a></p>
+      <p><a href="#" class="menu">Contact</a></p>
     </div>
     <div>
       <h2>Our Process</h2>
@@ -37,7 +37,9 @@
       <p>Twitter: @Test</p>
     </div>
     <div class="foot">
-      <p>© Broadway 2017 Home About Work Team Contact</p>
+      <p>© Broadway 2017 <a href="#" class="menu">Home</a>
+        <a href="#" class="menu">About</a> <a href="#" class="menu">Work</a>
+        <a href="#" class="menu">Team Contact</a></p>
     </div>
   </body>
 </html>
