Final comments and tweaks.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+<!-- Asesha's Broadway Project -->
   <head>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Broadway</title>
   </head>
   <body>
     <div class="heading">
+      <!--Originally, I made a seperate directory under resources for images
+      and another for my css code but was unable to link the file unless it was
+      in the same folder.
+      I made it work but I need to find a better solution for this. -->
       <h1>Broadway Design</h1>
       <p><a href="#" class="menu">Home</a></p>
       <p><a href="#" class="menu">About</a></p>
